RESOLVED FIXED200402
TextAutosizingBoost.ChangeAutosizingBoostAtRuntime fails on iPad Simulator
https://bugs.webkit.org/show_bug.cgi?id=200402
Summary TextAutosizingBoost.ChangeAutosizingBoostAtRuntime fails on iPad Simulator
Wenson Hsieh
Reported 2019-08-02 13:48:17 PDT
Attachments
Patch (3.52 KB, patch)
2019-08-02 14:06 PDT, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2019-08-02 14:06:14 PDT
WebKit Commit Bot
Comment 2 2019-08-02 15:58:04 PDT
Comment on attachment 375451 [details] Patch Clearing flags on attachment: 375451 Committed r248186: <https://trac.webkit.org/changeset/248186>
WebKit Commit Bot
Comment 3 2019-08-02 15:58:06 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.